[package]
name = "relative-luminance"
description = "Utlities to manage relative luminance"
version = "1.0.0"
edition = "2021"
license = "MIT or Apache-2.0"
repository = "https://github.com/spenserblack/relative-luminance-rs"
keywords = ["color", "luminance", "brightness", "cli", "terminal"]
categories = ["command-line-interface"]

[dependencies]

[dev-dependencies]
hsl = "0.1"
owo-colors = "4"
