[package]
name = "relative-luminance"
description = "Utilities to manage relative luminance"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/spenserblack/relative-luminance-rs"
keywords = ["color", "luminance", "brightness", "cli", "terminal"]
categories = ["command-line-interface"]
exclude = [".github/", ".editorconfig", ".gitignore", "target/"]

[dependencies]

[dev-dependencies]
hsl = "0.1"
owo-colors = "4"
